--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="quote-container" id="quote-container">
         <!-- Quote -->
@@ -31,5 +33,7 @@
     <div class="loader" id="loader"></div>
     <!-- Script -->
     <script src="script.js"></script>
+    <script src="quotes.js"></script>
 </body>
+
 </html>
